--- a/package.json
+++ b/package.json
@@ -12,8 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-currency-format": "^1.1.0",
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.7.1",
+    "react-router-dom": "^6.7.0",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1"
   },
   "jest": {
     "moduleNameMapper": {
